; ModuleID = '/home/carl/AnghaBench/linux/fs/udf/extr_inode.c_udf_getblk.c'
source_filename = "/home/carl/AnghaBench/linux/fs/udf/extr_inode.c_udf_getblk.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.buffer_head = type { i32, i32, i64 }
%struct.inode = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.buffer_head* (%struct.inode*, i32, i32, i32*)* @udf_getblk to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.buffer_head* @udf_getblk(%struct.inode* %0, i32 %1, i32 %2, i32* %3) #0 {
  %5 = alloca %struct.buffer_head*, align 8
  %6 = alloca %struct.inode*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca %struct.buffer_head*, align 8
  %11 = alloca %struct.buffer_head, align 8
  store %struct.inode* %0, %struct.inode** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32* %3, i32** %9, align 8
  %12 = getelementptr inbounds %struct.buffer_head, %struct.buffer_head* %11, i32 0, i32 2
  store i64 0, i64* %12, align 8
  %13 = getelementptr inbounds %struct.buffer_head, %struct.buffer_head* %11, i32 0, i32 0
  store i32 -1000, i32* %13, align 8
  %14 = load %struct.inode*, %struct.inode** %6, align 8
  %15 = load i32, i32* %7, align 4
  %16 = load i32, i32* %8, align 4
  %17 = call i32 @udf_get_block(%struct.inode* %14, i32 %15, %struct.buffer_head* %11, i32 %16)
  %18 = load i32*, i32** %9, align 8
  store i32 %17, i32* %18, align 4
  %19 = load i32*, i32** %9, align 8
  %20 = load i32, i32* %19, align 4
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %55, label %22

22:                                               ; preds = %4
  %23 = call i64 @buffer_mapped(%struct.buffer_head* %11)
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %55

25:                                               ; preds = %22
  %26 = load %struct.inode*, %struct.inode** %6, align 8
  %27 = getelementptr inbounds %struct.inode, %struct.inode* %26, i32 0, i32 0
  %28 = load %struct.TYPE_2__*, %struct.TYPE_2__** %27, align 8
  %29 = getelementptr inbounds %struct.buffer_head, %struct.buffer_head* %11, i32 0, i32 0
  %30 = load i32, i32* %29, align 8
  %31 = call %struct.buffer_head* @sb_getblk(%struct.TYPE_2__* %28, i32 %30)
  store %struct.buffer_head* %31, %struct.buffer_head** %10, align 8
  %32 = call i64 @buffer_new(%struct.buffer_head* %11)
  %33 = icmp ne i64 %32, 0
  br i1 %33, label %34, label %53

34:                                               ; preds = %25
  %35 = load %struct.buffer_head*, %struct.buffer_head** %10, align 8
  %36 = call i32 @lock_buffer(%struct.buffer_head* %35)
  %37 = load %struct.buffer_head*, %struct.buffer_head** %10, align 8
  %38 = getelementptr inbounds %struct.buffer_head, %struct.buffer_head* %37, i32 0, i32 1
  %39 = load i32, i32* %38, align 4
  %40 = load %struct.inode*, %struct.inode** %6, align 8
  %41 = getelementptr inbounds %struct.inode, %struct.inode* %40, i32 0, i32 0
  %42 = load %struct.TYPE_2__*, %struct.TYPE_2__** %41, align 8
  %43 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %42, i32 0, i32 0
  %44 = load i32, i32* %43, align 4
  %45 = call i32 @memset(i32 %39, i32 0, i32 %44)
  %46 = load %struct.buffer_head*, %struct.buffer_head** %10, align 8
  %47 = call i32 @set_buffer_uptodate(%struct.buffer_head* %46)
  %48 = load %struct.buffer_head*, %struct.buffer_head** %10, align 8
  %49 = call i32 @unlock_buffer(%struct.buffer_head* %48)
  %50 = load %struct.buffer_head*, %struct.buffer_head** %10, align 8
  %51 = load %struct.inode*, %struct.inode** %6, align 8
  %52 = call i32 @mark_buffer_dirty_inode(%struct.buffer_head* %50, %struct.inode* %51)
  br label %53

53:                                               ; preds = %34, %25
  %54 = load %struct.buffer_head*, %struct.buffer_head** %10, align 8
  store %struct.buffer_head* %54, %struct.buffer_head** %5, align 8
  br label %56

55:                                               ; preds = %22, %4
  store %struct.buffer_head* null, %struct.buffer_head** %5, align 8
  br label %56

56:                                               ; preds = %55, %53
  %57 = load %struct.buffer_head*, %struct.buffer_head** %5, align 8
  ret %struct.buffer_head* %57
}

declare dso_local i32 @udf_get_block(%struct.inode*, i32, %struct.buffer_head*, i32) #1

declare dso_local i64 @buffer_mapped(%struct.buffer_head*) #1

declare dso_local %struct.buffer_head* @sb_getblk(%struct.TYPE_2__*, i32) #1

declare dso_local i64 @buffer_new(%struct.buffer_head*) #1

declare dso_local i32 @lock_buffer(%struct.buffer_head*) #1

declare dso_local i32 @memset(i32, i32, i32) #1

declare dso_local i32 @set_buffer_uptodate(%struct.buffer_head*) #1

declare dso_local i32 @unlock_buffer(%struct.buffer_head*) #1

declare dso_local i32 @mark_buffer_dirty_inode(%struct.buffer_head*, %struct.inode*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
